处理图片问题，大于2k的图片用直接复制到dist文件下，小于8k的转换为base64格式

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,3 +4,8 @@
     background-color: hotpink;
     color: '#000'
 }
+
+/* // 给body添加一个背景图片 */
+body {
+    background: url("../assets/logo_small.png") no-repeat center;
+}
